# naija-macro-sentiment-tracker

./: .gitignore  README.md
.github/workflows/: azure-static-web-apps-thankful-beach-07fb02e0f.yml  backend-appservice.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 2f5a7c0197c4_expand_ingestion_run_metrics.py  6f7b1f0d093f_split_opinion_assessments.py  8c3e2a4d9b51_add_ingestion_runs.py  ba7340a79aa5_initial_schema.py  f2f7274f66b0_add_topic_label_to_raw_texts.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: feed.py  ingestion.py  sentiment.py
backend/app/core/: config.py  database.py
backend/app/db/: session.py
backend/app/etl/: __init__.py  runner.py
backend/app/models/: __init__.py  sentiment.py
backend/app/schemas/: __init__.py  sentiment.py
backend/app/services/: analysis.py  ingestion.py  news_sources.py  scheduler.py
backend/data/: 01_data_cleaning_eda.ipynb  raw_macro_data.csv  sample_macro_sentiment.csv
backend/tests/: test_analysis.py  test_hosted_etl_validation_helper.py  test_ingestion.py  test_news_sources.py  test_smoke.py
docs/: azure-release-runbook.md  github-actions-setup.md  ideas-for-steps.md  implementation-guide.md  manual-x-data-contract.md  plan.md  production-env-checklist.md  project-log.md  week-8-deployment-prep.md  week-9-deployment-notes.md  weekly-guide.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: analysis-page-client.tsx  app-top-bar-client.tsx  app-top-bar.tsx  control-panel.tsx  (+10 more)
scripts/: hosted_etl_validation.py  validate_hosted.ps1
(+2 files in other folders)
