[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naija-sentiment-tracker-backend"
version = "0.1.0"
description = "Backend API and ETL services for the Naija Sentiment Tracker."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2.0",
    "azure-ai-textanalytics>=5.3,<6.0",
    "fastapi>=0.115,<1.0",
    "openpyxl>=3.1,<4.0",
    "pandas>=2.2,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic-settings>=2.4,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
